--- a/install/cmd/nvim/nvim.sh.2
+++ b/install/cmd/nvim/nvim.sh.2
@@ -1,13 +1,30 @@
 #!/usr/bin/env bash
 # nvim installer script
 
+source $(mylib io)
+source $(mylib menu)
+source $(mylib sys)
+
 usage() {
     echo "$(basename $0) [apt | github]"
+	exit $1
 }
 
 prepare_plugin() {
     local url config_dir
-    local pos
+    local pos ver
+
+    # add prerequisites modules
+    # NOTE: assume Linux distro is Ubuntu
+    ver="$(lsb_release -r | awk '{print $2}')"
+    if (( $ver >= 18.04 )); then
+        sudo apt install python-neovim
+        sudo apt install python3-neovim
+    else
+        sudo apt install python-dev python-pip python3-dev
+        sudo apt install python3-setuptools
+        sudo easy_install3 pip
+    fi
 
     # install vim-plug
     config_dir="${XDG_CONFIG_HOME:-$HOME/.local/share}"
@@ -38,75 +55,56 @@ setup_default_editor() {
 github_install() {
     # URL: https://github.com/neovim/neovim
     local url='https://github.com/neovim/neovim'
-    local pos="/tmp/install/${bin}"
-    local ans
+    local pos="$(mktemp -d)"
+    local branch
 
     # add prerequisites modules
     sudo apt install ninja-build gettext libtool libtool-bin autoconf \
                     automake cmake g++ pkg-config unzip curl
 
+    # build nvim
+    ## choose version
+	menu_title "install versions:"
+	menu_prompt "select one to continue:"
+	menu_default 1
+	menu 'stable' 'nightly'
+	branch=$(menu_final)
+
     # remove install dir
     trap "rm -rf $pos" ERR EXIT
 
     # download git
-    git clone --depth=1 $url $pos
-
-    # build nvim
-    ## choose version
-    cd $pos
-    PS3='Choose an install version: '
-    select ver in 'stable' 'nightly'; do
-        if [[ "$ver" == 'stable' ]]; then
-            git checkout stable
-        fi
-        break
-    done
+    git clone --depth=1 -b $branch $url $pos
 
     ## build nvim
-    make -j4
-    sudo make install
-    cd -
+    make -C $pos -j4
+    sudo make -C $pos install
 }
 
 apt_install() {
-    local ver
+    local ver key
 
+    # build nvim
+    ## choose version
+	menu_title "install ppa versions:"
+	menu_prompt "select one to continue:"
+	menu_default 1
+	menu 'stable' 'unstable' 'no-changed'
+	ver=$(menu_final)
     # choose version and add related ppa key
-    select ver in 'stable' 'unstable' 'apt-preload'; do
-        case $ver in
-            stable)
-                key='ppa:neovim-ppa/stable'
-                trap "sudo add-apt-repository --remove ${ppa}" ERR
+	case $ver in
+		stable | unstable)
+			key="ppa:neovim-ppa/${ver}"
+			trap "sudo add-apt-repository --remove ${key}" ERR
 
-                echo 'add ppa key of stable nvim'
-                sudo add-apt-repository $key
-                sudo apt update
-                ;;
-            unstable)
-                key='ppa:neovim-ppa/unstable'
-                trap "sudo add-apt-repository --remove ${ppa}" ERR
-
-                echo 'add ppa key of unstable nvim'
-                sudo add-apt-repository $key
-                sudo apt update
-                ;;
-            apt-preload)
-                echo 'use default neovim package in apt list'
-        esac
-        break
-    done
-
-    # add prerequisites modules
-    # NOTE: assume Linux distro is Ubuntu
-    ver="$(lsb_release -r | awk '{print $2}')"
-    if (( $ver >= 18.04 )); then
-        sudo apt install python-neovim
-        sudo apt install python3-neovim
-    else
-        sudo apt install python-dev python-pip python3-dev
-        sudo apt install python3-setuptools
-        sudo easy_install3 pip
-    fi
+			echo 'add ppa key of $ver nvim'
+			sudo add-apt-repository $key
+			sudo apt update
+			;;
+		no-changed)
+			echo 'use default neovim package in apt list'
+			;;
+	esac
 
     # install neovim
     sudo apt install neovim
@@ -117,35 +115,34 @@ set -eE
 
 bin='nvim'
 
-if [[ ! -z "$(type -p ${bin})" ]]; then
-    pr_warn "you have install ${bin} already"
-fi
+has_cmd "$bin" && pr_warn "you have install ${bin} already"
 
 if [[ ! -z "$1" ]]; then
-    if [[ -z "$(type ${1})_install" ]]; then
-        usage
-        exit 2
-    fi
+
+	has_cmd "${1}_install" || usage 2
 
     eval ${1}_install
     exit 0
 fi
 
-PS3='select install source > '
-select src in 'github' 'apt' 'skip' 'cancel'; do
-    case $src in
-        cancel)
-            echo "cancel operation"
-            exit 0
-	    ;;
-        skip)
-            echo "skip installization"
-            ;;
-        *)
-            eval ${src}_install
-    esac
-    break
-done
+menu_title "install sources:"
+menu_prompt "select one to continue:"
+menu_default 4
+menu 'github' 'apt' 'skip' 'cancel'
+src=$(menu_final)
+echo $src
+
+case $src in
+	cancel)
+		echo "cancel operation"
+		exit 0
+		;;
+	skip)
+		echo "skip installization"
+		;;
+	*)
+		eval ${src}_install
+esac
 
 # check if install plugin or not
 ans=''
