--- a/install/cmd/nvim/nvim.sh.2
+++ b/install/cmd/nvim/nvim.sh.2
@@ -77,7 +77,7 @@ github_install() {
 	menu_title "install versions:"
 	menu_prompt "select one to continue:"
 	menu_default 1
-	menu 'stable' 'nightly'
+	menu_select 'stable' 'nightly'
 	branch=$(menu_choice)
 
     # remove install dir
@@ -99,7 +99,7 @@ apt_install() {
 	menu_title "install ppa versions:"
 	menu_prompt "select one to continue:"
 	menu_default 1
-	menu 'stable' 'unstable' 'no-changed'
+	menu_select 'stable' 'unstable' 'no-changed'
 	ver=$(menu_choice)
     # choose version and add related ppa key
 	case $ver in
@@ -138,7 +138,7 @@ fi
 menu_title "install sources:"
 menu_prompt "select one to continue:"
 menu_default 4
-menu 'github' 'apt' 'skip' 'cancel'
+menu_select 'github' 'apt' 'skip' 'cancel'
 src=$(menu_choice)
 echo $src
 
