--- a/install/cmd/nvim/nvim.sh.2
+++ b/install/cmd/nvim/nvim.sh.2
@@ -1,9 +1,9 @@
 #!/usr/bin/env bash
 # nvim installer script
 
-source $(mylib io)
-source $(mylib menu)
-source $(mylib sys)
+lib.add io
+lib.add menu
+lib.add sys
 
 usage() {
     echo "$(basename $0) [apt | github]"
